<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_dialog_map" 
        android:title="@string/map_view" />

    <item
        android:id="@+id/navigation_restaurants"
        android:icon="@android:drawable/ic_menu_sort_by_size" 
        android:title="@string/restaurants" />

    <item
        android:id="@+id/navigation_workmates"
        android:icon="@android:drawable/ic_menu_myplaces" 
        android:title="@string/workmates" />

</menu>
