<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workmates.WorkmatesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workmates_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/workmates_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_coworkers_found"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
